--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,22 +16,14 @@ dependencies:
   flutter:
     sdk: flutter
 
-  image: 3.2.2
+  camera: 0.10.3+2
   get_it: 7.2.0
-  tflite_flutter: 0.9.0
-  tflite_flutter_helper:
-    git:
-      url: https://github.com/filofan1/tflite_flutter_helper.git
-      ref: 783f15e5a87126159147d8ea30b98eea9207ac70
+  tflite:
+    path: D:/_work/colors_of_clothes/tflite/flutter_tflite-master/flutter_tflite-master
   #collection: 1.16.0
   #image: 3.2.2
 
   cupertino_icons: ^1.0.2
-
-dependency_overrides:
-  camera: 0.10.3+2
-
-
 
 dev_dependencies:
   flutter_test:
