--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,17 +17,24 @@ dependencies:
     sdk: flutter
 
   camera: 0.10.3+2
-  get_it: 7.2.0
   tflite:
     path: D:/_work/colors_of_clothes/tflite/flutter_tflite-master/flutter_tflite-master
+  get_it: 7.2.0
+  injectable: 2.1.1
   image: 4.0.15
   palette_generator: 0.3.3+2
+  flutter_bloc: 8.1.2
+  freezed: 2.3.2
+  freezed_annotation: 2.2.0
+
 
   cupertino_icons: ^1.0.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  build_runner: 2.3.3
+  injectable_generator: 2.1.5
 
 
   flutter_lints: ^2.0.0
