--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,10 +14,12 @@ dependencies:
   tflite:
     path: D:/_work/colors_of_clothes/tflite/flutter_tflite-master/flutter_tflite-master
   get_it: 7.2.0
-  native_device_orientation: ^1.1.4
+  native_device_orientation: 1.1.4
   image: 4.0.15
   palette_generator: 0.3.3+2
   flutter_bloc: 8.1.2
+  image_picker: 0.8.7+4
+  photo_manager: 2.6.0
   freezed: 2.3.2
   freezed_annotation: 2.2.0
   injectable: 2.1.1
@@ -30,9 +32,7 @@ dev_dependencies:
   build_runner: 2.3.3
   injectable_generator: 2.1.5
 
-
   flutter_lints: ^2.0.0
-
 
 flutter:
 
@@ -41,34 +41,3 @@ flutter:
   assets:
     - assets/labels.txt
     - assets/model_unquant.tflite
-
-  # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
-
-  # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/assets-and-images/#resolution-aware
-
-  # For details regarding adding assets from package dependencies, see
-  # https://flutter.dev/assets-and-images/#from-packages
-
-  # To add custom fonts to your application, add a fonts section here,
-  # in this "flutter" section. Each entry in this list should have a
-  # "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
-  # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
-  # For details regarding fonts from package dependencies,
-  # see https://flutter.dev/custom-fonts/#from-packages
