--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,8 +18,8 @@ dependencies:
   image: 4.0.15
   palette_generator: 0.3.3+2
   flutter_bloc: 8.1.2
-  image_picker: 0.8.7+4
   photo_manager: 2.6.0
+  sliver_tools: 0.2.10
   freezed: 2.3.2
   freezed_annotation: 2.2.0
   injectable: 2.1.1
