--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,35 +4,31 @@ description: Project to detect colors of clothes
 version: 1.0.0+1
 
 environment:
-  sdk: '>=2.19.6 <3.0.0'
+  sdk: '>=3.0.3 <4.0.0'
 
 dependencies:
   flutter:
     sdk: flutter
 
-  camera: 0.10.5+2
   tflite:
     path: D:/_work/colors_of_clothes/tflite/flutter_tflite-master/flutter_tflite-master
   get_it: 7.6.0
-  native_device_orientation: 1.1.4
   image: 4.0.17
   palette_generator: 0.3.3+2
   flutter_bloc: 8.1.3
-  photo_manager: 2.6.0
-  sliver_tools: 0.2.10
   freezed: 2.3.4
   freezed_annotation: 2.2.0
   injectable: 2.1.2
   animate_gradient: 0.0.2+1
   rxdart: 0.27.7
-
+  image_picker: ^0.8.7+5
 
   cupertino_icons: ^1.0.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  build_runner: 2.4.4
+  build_runner: 2.4.5
   injectable_generator: 2.1.6
   flutter_native_splash: 2.3.0
 
